updating infomation on website and finalizing

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello and Holy @#%* I did it and created a website page for myself, good job me</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm originally from a small town in Lakin, Kansas where the most exciting thing to do was cow tipping. However, I grew up in Seattle and yes I know "we're not in Kansas anymore"....get a new joke.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My Hobbies include Tumbling and stunting and if I'm not going that I'm either working on my car or playing video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I don't dream of labor, peasants, but I would love to run my own business either making or selling custom computers or own a cheer or gymnastics gym.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in South Seattle with my Little Brother and two dogs, one I want to put on a headlock and body slam him, the other screams at me if i don't give him affection </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because I enjoy coding and the amount of creativity you have with being a web developer..... is that right is that what im supposed to say?</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="https://github.com/ProfessorXavier206">Github</a></li>
         </ul>
     </footer>
 </body>
