Fixing Spelling Error and grammer

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <h1>Where I'm From</h1>
       <p>I'm originally from a small town in Lakin, Kansas where the most exciting thing to do was cow tipping. However, I grew up in Seattle and yes I know "we're not in Kansas anymore"....get a new joke.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>My Hobbies include Tumbling and stunting and if I'm not going that I'm either working on my car or playing video games.</p>
+      <p>My Hobbies include Tumbling and stunting and if I'm not doing that I'm either working on my car or playing video games.</p>
       <h1>What's your dream job?</h1>
-      <p>I don't dream of labor, peasants, but I would love to run my own business either making or selling custom computers or own a cheer or gymnastics gym.</p>
+      <p>I don't dream of labor, but I would love to run my own business either making or selling custom computers or own a cheer or gymnastics gym.</p>
       <h1>Where do you live?</h1>
       <p>I currently live in South Seattle with my Little Brother and two dogs, one I want to put on a headlock and body slam him, the other screams at me if i don't give him affection </p>
       <h1>Why do you want to be a web developer?</h1>
